# citadel-search

./: .api_token  .dockerignore  .env  .env-alias-search  .env-codimd  .env-discoursearchives  .env-edms  .env-egroupsarchives  .env-indico  .env-lcagenda  .env-notificationsarchives  .env-staging  .env-webservices  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pipenv.env  .poetry.env  .pre-commit-config.yaml  AUTHORS.md  CHANGES.md  CONTRIBUTING.md  Dockerfile  Dockerfile-base  INSTALL.md  LICENSE  Makefile  Pipfile  README.md  README.rst  docker-compose.es.yml  docker-compose.full.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-devel.txt  requirements.txt  setup.cfg  setup.py  (+1 more)
cern_search_rest/: config.py  factory.py  version.py  wsgi.py
cern_search_rest_api/: __init__.py  celery.py  config.py  version.py  wsgi.py
documentation/mappings/: indico.md
nginx/: nginx.conf  ssl.conf
scripts/: create-instance.sh  create-test-user.sh  gen-cert.sh  manage-user.sh  patch.sh  populate-instance.sh
scripts/patch/: cern.py  oauth_patch.sh
scripts/pipenv/: bootstrap  populate-instance.sh  requirements.sh  server
template/: cern-search-api.yml  cern-search-rest-api.yml
tests/: __init__.py  conftest.py  test_binary_files.py  test_default_search_field.py  test_schema_validation.py  test_search.py  test_suggester.py  test_ui.py
tests/api/: __init__.py  conftest.py  helpers.py  test_api_flow.py  test_binary_files.py  test_files.py  test_schema_validation.py  test_search.py  test_stored_fields.py  test_stored_fields_in_metadata.py  test_suggester.py
tests/ui/: __init__.py  conftest.py  test_ui.py
tests/unit/: __init__.py  (+7 more)
(+226 files in other folders)
